@@ -38,6 +38,7 @@ ________________________________________________________________________________
 
 RSS Feed available here: @/<a href=/news/news.xml>news/news.xml</a>
 
+- @/<a href=/news/20210712a>news/20210712a</a> kiss-community's status
 - @/<a href=/news/20210519a>news/20210519a</a> Update on Dylan, IRC
 - @/<a href=/news/20210507a>news/20210507a</a> Kernel 5.12.0 build issue
 - @/<a href=/news/20210414a>news/20210414a</a> Mailing list announcement
