@@ -1,0 +1,184 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS - 20210712a</title><meta charset=utf-8><meta name=Description content="An independent Linux distribution with a focus on simplicity and the concept of less is more."><meta name=viewport content="width=device-width,initial-scale=1"><style>body{overflow-y:scroll;font:16px monospace,monospace}img,.c{display:table-cell;max-width:999px;max-width:80ch}pre{margin:0;overflow-x:hidden}@media(max-width:999px){.c{display:block;font-size:1.94vw}}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><div style="display:table;margin:16px auto"><div class=c><pre style="top:0;position:sticky;user-select:none;padding-right:64px">
+<a href=/ style="text-decoration:none;color:#a00">
+|/
+|\ISS
+</a>
+<a href=/news>News</a>
+<a href=/blog>Blog</a>
+
+<a href=/wiki>Wiki</a>
+
+<a href=/install>Install KISS</a>
+<a href=/faq>FAQ</a>
+
+<a href=/package-system>Package System</a>
+<a href=/package-manager>Package Manager</a>
+<a href=/software>Software</a>
+
+<a href=/guidestones>Guidestones</a>
+
+<a href=/testimonials>Testimonials</a>
+<a href=/screenshots>Screenshots</a>
+<a href=/team>Team</a>
+
+<a href=/contact>Contact</a>
+<a href=/donate>Donate</a>
+<a href=/website>Website</a>
+<a href=/irc>IRC</a>
+
+<a href=https://github.com/kiss-community/>GitHub</a>
+<a href=https://git.k1sslinux.org/>Git (mirror)</a>
+<a href=https://archive.k1sslinux.org/>ML (archive)</a>
+
+</pre></div><div class=c><pre>
+
+
+Subject kiss-community's status
+From    Dilyn Corner <dilyn.corner@tutanota.com>
+Date    Mon, 12 Jul 2021 13:08:00 -0500
+
+Hello all!
+
+Recently, $/<a href=https://github.com/dylanaraps>dylanaraps</a> arrived back on the scene, making plenty of
+contributions, restoring the previous $/<a href=https://github.com/kisslinux>kisslinux</a> org, and doing some incredibly
+major changes to KISS Linux! I know I speak for everyone when I say that I'm
+glad he's back and getting back to what he loves doing.
+
+Dylan has made some posts; I recommend reading them! <a href=#0>[0]</a> <a href=#1>[1]</a> <a href=#2>[2]</a>.
+
+Naturally, his coming back has brought up quite the onslaught of questions. I'm
+going to answer as many of them as I can, and hopefully eliminate the confusion
+surrounding all of this :)
+
+
+* First and foremost: the new project URL is kisslinux.xyz.
+
+I do not know what will come of k1sslinux.org.
+Dylan did not/has not asked for the domain or the VPS hosting the mail server or
+the git & fossil mirrors of the repositories. So it seems that he doesn't want
+them, which is totally fine. At present, the site will continue to exist for a
+short while longer, though it should no longer be the reference point for where
+to get information on KISS. The site will eventually simply be a redirect to
+kisslinux.xyz, or cease to exist. There could potentially be a new website,
+which leads me to my next point...
+
+
+* $/<a href=https://github.com/kiss-community>kiss-community</a> will continue to exist.
+
+This org came into existence as a way of centralizing the work being done on the
+core parts of KISS, namely the main repositories, init, the wiki, the website,
+and kiss itself. With Dylan back, much of this work is redundant (if not wholly
+confusing to users). As such, $/<a href=https://github.com/kiss-community>kiss-community</a> will see some restructuring.
+
+What you can expect:
+$/<a href=https://github.com/kiss-community/repo>kiss-community/repo</a> will no longer be the main upstream repository. If you are
+100% on board with the work Dylan is doing at $/<a href=https://github.com/kisslinux/repo>kisslinux/repo</a> feel free to
+switch your remotes and carry on as you always have! Please be aware that the
+project has seen some major changes. The switch from Xorg to Wayland shouldn't
+present (many) breaking changes to your setups, but the switch from Libressl to
+Openssl could certainly cause some potentially strange problems. I leave it to
+each user to determine how heavily they're impacted, but if you switch, I
+recommend:
+0) Change remotes (git remote set-url origin <a href=https://github.com/kisslinux/repo>https://github.com/kisslinux/repo</a>)
+1) Identifying which packages require libressl (kiss-revdepends libressl)
+2) Download the sources for those packages (kiss d $(kiss-revdepends libressl))
+3) Building and installing openssl (kiss b openssl)
+4) Forcibly removing libressl (KISS_FORCE=1 kiss r libressl)
+5) Rebuild the packages from 1) (kiss b $(kiss-revdepends libressl)).
+
+The switch to Wayland presents a possibly harder hurdle. I would recommend
+simply removing your entire xorg stack (xorg-server, libinput, xf86-*, etc) and
+starting over - many packages saw the elimination of dependencies, options, etc.
+which could cause some... strange issues.
+
+
+* $/<a href=https://github.com/kiss-community>kiss-community</a> will serve a different purpose
+
+I've mentioned this on IRC <a href=#3>[3]</a>, but it's worth saying here:
+    $/<a href=https://github.com/kiss-community/repo>kiss-community/repo</a> will not be a suitable upstream location. I have not
+    been using Xorg for many months, and don't want to maintain a fork of KISS.
+    IF anyone is interested in maintaining a libressl+xorg version of the main
+    repository, you are more than welcome to do so AND host it at
+    $/<a href=https://github.com/kiss-community>kiss-community</a> - pop into IRC and we can all discuss it :)
+
+
+* Dylan does not intend on hosting a community repository.
+
+$/<a href=https://github.com/kiss-community/community>kiss-community/community</a> will continue to exist to serve its purpose as usual.
+However, it is still governed by the guidestones behind KISS. Packages in it
+should build against whatever exists in $/<a href=https://github.com/kisslinux/repo>kisslinux/repo</a> as this is the
+standard. Xorg packages will not be accepted (and should be dropped), openssl
+should replace libressl in dependencies lists, etc. If $/<a href=https://github.com/kiss-community/repo>kiss-community/repo</a>
+becomes a xorg+libressl repo, a community project can exist there (making it
+repo/extra, repo/xorg, repo/community).
+
+
+* $/<a href=https://github.com/kiss-community>kiss-community</a> can expand
+
+Large projects are welcome to be held under the umbrella of the KISS community
+org which need not keep to the guidestones as strictly! This includes proper
+ports of KISS, KISS with glibc, large projects like KISS-kde or kiss-xfce4, a
+dbus/pipewire/pulseaudio repo, etc. If you would like to maintain something like
+this at $/<a href=https://github.com/kiss-community>kiss-community</a> ... hop into IRC :)
+
+
+* $/<a href=https://github.com/kiss-community/repo-bin>kiss-community/repo-bin</a> will be broadened
+
+repo-bin was initially for 'time consuming packages' in the main repository.
+This can now be extended to packages in community (like chromium, webengine). If
+you would like to contribute a package to repo-bin... Hop into IRC to discuss!
+
+
+* Certain repositories will be archived
+
+This list includes init, kiss, website, and wiki. There isn't much of a need for
+them. Any contributions meant for there can instead be sent to $/<a href=https://github.com/kisslinux>kisslinux</a> :)
+
+
+* IRC and Reddit are now unofficial channels
+
+It would seem Dylan would prefer to stick more closely to simply maintaining the
+project and less time fiddling with IRC and the subreddit. While there have been
+some commits to the repositories that make it seem like Dylan is watching the
+IRC logs, he hasn't been very active in there. These areas will continue under
+their current control structures, though they could potentially change in the
+future. Just be aware that these are now entirely community-run enterprises, and
+aren't to be construed as officially involved with the KISS project. They are
+still, however, still about our beloved distribution :)
+
+
+---
+
+
+I'd like to reiterate: I am not forking KISS, I have no intention of maintaining
+a fork of KISS (outside of the work I've done myself at $/<a href=https://github.com/dilyn-corner/KISS-me>dilyn-corner/KISS-me</a>
+which is... roughly a fork), and KISS is not MY project. It is and always has
+been Dylan's. If you don't like his changes or my decision, you're in luck; the
+distribution was devised in such a way that you can do your own thing. Several
+users are already doing their own work (<a href=https://asd.armaanb.net,>https://asd.armaanb.net,</a>
+$/<a href=https://github.com/ehawkvu/kiss-xorg>ehawkvu/kiss-xorg</a> for instance).
+
+I won't push changes which IMMEDIATELY break your machines, but you should be
+looking to make your relevant migrations in the next week or two.
+
+
+Thank you for your time, and I look forward to this new chapter!
+
+    Dilyn
+
+
+<span id=0><a href=#0>[0]</a></span> <a href=https://kisslinux.xyz/news/20210703a>https://kisslinux.xyz/news/20210703a</a>
+<span id=1><a href=#1>[1]</a></span> <a href=https://kisslinux.xyz/news/20210708a>https://kisslinux.xyz/news/20210708a</a>
+<span id=2><a href=#2>[2]</a></span> <a href=https://kisslinux.xyz/blog/20210711a>https://kisslinux.xyz/blog/20210711a</a>
+<span id=3><a href=#3>[3]</a></span> <a href=https://libera.irclog.whitequark.org/kisslinux/2021-07-11#30251868>https://libera.irclog.whitequark.org/kisslinux/2021-07-11#30251868</a>
+
+
+________________________________________________________________________________
+
+Dylan Araps    (C) 2019-2020
+kiss-community (C) 2020-2021
+Dilyn Corner   (C) 2021
+
+Linux(R) is the registered trademark of Linus Torvalds in the U.S. and
+other countries.
+</pre></div></div>
