@@ -8,6 +8,13 @@
 <ttl>1800</ttl>
 <atom:link href="https://k1sslinux.org/news/news.xml" rel="self" type="application/rss+xml"/>
 <item>
+<title>12/07/2021: kiss-community's status</title>
+<description></description>
+<link>https://k1sslinux.org/news/20210712a</link>
+<guid isPermaLink="true">https://k1sslinux.org/news/20210712a/</guid>
+<pubDate>Mon, 12 Jul 2021 00:00:00 +0000</pubDate>
+</item>
+<item>
 <title>19/05/2021: Update on Dylan, IRC</title>
 <description></description>
 <link>https://k1sslinux.org/news/20210519a</link>
